# aadc-prototype

./: .gitignore  CMakeLists.txt  NaiveAADLib.h  README.md  aadc.sln  aadc.vcxproj  example.cpp  mySuperModelFuncAAD.h  mySuperModelFuncAAD256.h  mySuperModelFuncAAD512.h  wintools.h
